# SWED-AI-RQIE-O-HI-E-H

./: .coveragerc  CITATION.cff  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Grok_MSS_AI_Development_Report.md  LICENSE  MCF_University_Infiltration_Report.md  MSS_AI_Intelligence_1995-2025.md  MSS_AI_Intelligence_1995-2025__ANKAA.md  MSS_LinkedIn_Infiltration_Analysis__CLAUDE.md  MSS_LinkedIn_refs.md  README.md  config.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Intelligence-Analyst/: 100-HOUR-SCOPE-PROPOSAL.md  LinkedIn_Infiltration_Research_Plan.md  Sesame_Project_Research_Schedule.md
LinkedIn/: Ankaa_Intel_Report__08.20.25.md  Ankaa_Intel_Report__08.20.25.txt  README.md
LinkedIn/Sesame/: LinkedIn_HelpAssistant_Report.md  README.md  RESULTS.md  event-based-gaze-risk-report.md  export_controls_voice_cloning.md
case-studies/chen-lai/: notes.md
datasets/: README.md  analysis_summary.md  fake_profiles.csv  fake_profiles.md  indictments.csv  indictments.md  mcf_institution_partnerships.csv  mcf_institution_partnerships.md
docs/: REVIEW_GUIDELINES.md  STYLE.md
dragon-fall/: README.md
research/: README.md  china_human_monitoring_manpower_budget_analysis.md  china_human_monitoring_report.md  cyber_employment_report_summary.md  mss_ai_intelligence_cycle_report.md
scripts/: analyze_datasets.py  update_datasets.py  validate_data.py
shell-companies/: README.md
tests/: test_analyze_datasets.py  test_cli.py  test_concurrency.py  test_update_datasets.py  test_validate_data.py
(+67 files in other folders)
